# Train-Measurement

./: .gitignore  CMakeLists.txt  README.md  data_analysis.py  filter_app.md  traindata.py
src/: device.cpp  device.hpp  functional_iter.cpp  main.cpp  matrix.hpp
